# secnotes

./: .gitignore  README.rst  requirements.txt  setup.cfg
secnotes/: __init__.py  secnotes.py
