[metadata]
name = secnotes
summary = Find security related patches
description-file =
    README.rst
author = Vladislav Kuzmin
author-email = vladiskuz@gmail.com
classifier =
    Development Status :: 1 - Alpha
    Environment :: Console
    Environment :: Gerrit
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Version Control
    Topic :: Utilities

[files]
packages =
    secnotes

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    secnotes = secnotes.secnotes:main


[wheel]
universal = 1
